kubernetes/add-ons/minio/manifest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    certmanager.k8s.io/acme-http01-edit-in-place: "false"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: minio-console
  namespace: minio
spec:
  ingressClassName: nginx
  rules:
  - host: minio.kube.mecan.ir
    http:
      paths:
      - backend:
          service:
            name: minio-console
            port:
              number: 9001
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - minio.kube.mecan.ir
    secretName: minio-general-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    certmanager.k8s.io/acme-http01-edit-in-place: "false"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: minio-api
  namespace: minio
spec:
  ingressClassName: nginx
  rules:
  - host: object.kube.mecan.ir
    http:
      paths:
      - backend:
          service:
            name: minio
            port:
              number: 9000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - object.kube.mecan.ir
    secretName: object-general-tls
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: minio
    meta.helm.sh/release-namespace: minio
  labels:
    app: minio
  name: minio-console
  namespace: minio
spec:
  ports:
  - name: http
    port: 9001
    protocol: TCP
    targetPort: 9001
  selector:
    app: minio
    release: minio
  type: ClusterIP
